syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (ChatMessage) returns (SendMessageResponse); // unary
  rpc StreamChat (stream ChatMessage) returns (stream ChatMessage); // bidirectional streaming
}

message ChatMessage {
  string room_id = 1;
  string sender = 2;
  string content = 3;
  int64 timestamp = 4;
}

message SendMessageResponse {
  bool success = 1;
  string message = 2;
}
